<resources>
    <string name="app_name">BloodBankApp</string>
    <string name="savlife">Savlife</string>
    <string name="every_blood">Every blood donor is a \n</string>
    <string name="life_saver">life saver.</string>
    <string name="we_don_t_po">We don`t post anything to facebook\ </string>
    <string name="by_sign_in_">By sign in ,you agree with our Terms of Service and Privacy policy</string>
    <string name="continue_facebook">Continue with facebook</string>
    <string name="continue_gmail">Continue with email id</string>
    <string name="continue_phone">Continue with email id</string>
    <string name="language">language</string>
    <string name="hello">Hello,</string>
    <string name="about_us">About us</string>
    <string name="feedback">Feedback</string>
    <string name="report_us">Report us</string>
    <string name="faq">FAQ</string>
    <string name="help_desk">Help desk</string>
    <string name="logout">Log out</string>
    <string name="find_donor">Find Donor</string>
    <string name="request_blood">Request for Blood</string>
    <string name="add_camp">Add Camp</string>
    <string name="message">Message</string>
    <string name="community">Community</string>
    <string name="track_your_order">Track your order</string>
    <string name="search">Search</string>
    <string name="blood">Blood</string>
    <string name="plasma">Plasma</string>
    <string name="platelet">Platelet</string>
    <string name="blood_bank">\ \ \ \<u>Blood Bank</u></string>
    <string name="blood_bank_title">Blood Bank</string>
    <string name="ambulance">\ \ \ \<u>Ambulance</u></string>
    <string name="ambulance_title">Ambulance</string>
    <string name="emergency_a">Emergency Ambulance toll free number : 108</string>
    <string name="frag">Fragment 2</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="empty_box">Empty Box!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="map">Map</string>
    <string name="information">Information</string>
    <string name="type_of_donation"><u>Type Of Donation</u></string>
    <string name="there_are_m">There are many ways you can make a difference and save lives. Our team members will help identify which type of donation is best for you, based on your blood type and the immediate need for blood or blood products.</string>
    <string name="whole_blood"><u>Whole Blood</u></string>
    <string name="platelets"><u>Platelets</u></string>
    <string name="why_your_do"><u>Why Your Donation Matters</u></string>
    <string name="compatibility"><u>Compatibility</u></string>
    <string name="everyone_wh">Everyone who is eligible can donate blood, but depending on your blood type, you\'re only able to receive certain types of blood, plasma or platelets.</string>
    <string name="there_are_e">There are eight different blood types, and they\'re not always compatible with each other. Interestingly, people who have O-negative blood are considered universal donors for the entire population.</string>
    <string name="blood_type">Blood Type</string>
    <string name="can_do">Can Donate\n Red Blood\n Cells To</string>
    <string name="plasma_platelet"><u><![CDATA[Plasma & Platelet]]></u></string>
    <string name="when_it_com">When it comes to blood components, compatibility is the opposite of whole blood. Donors with Type AB blood are the universal donors of platelets and plasma.</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="doner">Doner</string>
    <string name="mail">\ \ \ \ Mail</string>
    <string name="user_gmail">User@gmail.com</string>
    <string name="phone">\ \ \ \ Phone</string>
    <string name="txt_phone">Phone</string>
    <string name="user_number">user number</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="rate_us">Rate us</string>
    <string name="delete_account">Delete account</string>
    <string name="blood_for">Blood for</string>
    <string name="enter_reason_here">Enter reason here</string>
    <string name="a">A+</string>
    <string name="submit">Submit</string>
    <string name="u_plasma"><u>Plasma</u></string>
    <string name="nearest_donor">Nearest Donor</string>
    <string name="blood_donation_camp"><u>Blood Donation Camp</u></string>
    <string name="organized_by">Organized by <b>SaveLife</b></string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="select_from">Select from</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="select_to">Select to</string>
    <string name="reset">Reset</string>
    <string name="hh_mm">HH/MM</string>
    <string name="some_text"><![CDATA[normal color <font color=\'#FE8083\'>special color</font>]]></string>
    <string name="savlife_is_"> is one of the frequent and easy app. we have large number of community as well non-profitable blood donation app in the India.We organized blood donation camp for helping our whole family.</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_is"> mission is to serve our community by meeting the needs of patients, hospitals, and donors for safe, high quality blood products and related services.</string>
    <string name="app_version">App version 20.22.1.1</string>
    <string name="copyrights_2022_savlife">Copyrights © 2022 savlife</string>
    <string name="all_rights_reserve">All rights reserve.</string>
    <string name="patient_name">Patient Name</string>
    <string name="reason_optional">Reason (Optional)</string>
    <string name="name">Name</string>
    <string name="a_minus">A-</string>
    <string name="b">B+</string>
    <string name="b_minus">B-</string>
    <string name="ab">AB+</string>
    <string name="ab_minus">AB-</string>
    <string name="o">O+</string>
    <string name="o_minus">O-</string>
    <string name="bank_name">Bank Name</string>
    <string name="bullet">•</string>
    <string name="ratings">Ratings</string>
    <string name="view_more"><u>View more</u></string>
    <string name="direction"><u>Direction</u></string>
    <string name="we_are_here_to_help_you_24_7">We are here to help you 24*7</string>
    <string name="our_customer">Our 24*7 Customer service number</string>
    <string name="no"><u>1800 777 7777</u></string>
    <string name="or"><u>OR</u></string>
    <string name="mail_us">Mail us on</string>
    <string name="helppeople_gmail_com">helppeople@gmail.com</string>
    <string name="q_after_drinking">Q: After Drinking alcohol can I donate blood?</string>
    <string name="q_can_i_don">Q: Can I donate blood when i have take anti-biotic medicine?</string>
    <string name="q_can_i_donate_b">Q: Can I donate blood as I am suffering for abnormal blood pressure?</string>
    <string name="q_can_a_diabetic">Q: Can a diabetic patient donate blood?</string>
    <string name="q_is_there_any_side">Q: Is there any side effect of donating blood?</string>
    <string name="q_is_it_safe_t">Q: Is it safe to donate blood?</string>
    <string name="q_can_i_donate_blood">Q: Can I donate blood after taking vaccine?</string>
    <string name="ans1">A: No, You can not donate blood within 24 hours of your last drink time</string>
    <string name="ans2">A: You cannot give blood if you currently have an infection. If antibiotics are taken for the treatment of an infection, you must be fully recovered for at least 14 days and have completed the course of antibiotics at least 7 days before donating.</string>
    <string name="ans3">A: Acceptable as long as your blood pressure is below 180 systolic (first number) and below 100 diastolic (second number) at the time of donation. Medications for high blood pressure do not disqualify you from donating</string>
    <string name="ans4">A: People with diabetes can donate blood, as long as they maintain healthy blood sugar levels at the time of blood donation.</string>
    <string name="ans5">A:The side effects of donating blood include nausea and dizziness and fainting in some cases. You may develop a raised bump or experience continued bleeding and bruising at the needle site too. Some people might experience pain and physical weakness after donating blood.</string>
    <string name="ans6">A:Yes. Remember that you will only be accepted as a blood donor if you are fit and well. Your health and well-being are very important to the blood service.</string>
    <string name="ans7">A:Yes. But there are some rules you’ll need to follow before you donate your blood after getting the jab. According to the eligibility guidelines set by the FDA, if you qualify to donate blood, in most cases, you can do it any time after you’ve had your COVID-19 vaccine.</string>
    <string name="whole_blood_is_the_most">Whole blood is the most common type of donation.</string>
    <string name="blood_from_one_do">Blood from one donation can be divided into two components: red blood cells and plasma.</string>
    <string name="the_average_adult">The average adult has about 10 pints of blood, but a typical whole-blood donation is only 1 pint.</string>
    <string name="red_blood_cells_have_a_short_shelf_life_they_only_last_for_6_weeks_42_days">Red blood cells have a short shelf life. They only last for 6 weeks (42 days).</string>
    <string name="you_can_donate_whole_blood_every_56_days_and_we_encourage_you_to_donate_as_often_as_possible">You can donate whole blood every 56 days—and we encourage you to donate as often as possible.</string>
    <string name="platelets_are_small_disc_shaped_cells_that_aid_in_blood_clotting">Platelets are small, disc-shaped cells that aid in blood clotting.</string>
    <string name="they_are_donated_most_often_to_cancer_patients_organ_recipients_and_those_undergoing_heart_surgeries">They are donated most often to cancer patients, organ recipients and those undergoing heart surgeries.</string>
    <string name="patients_who_need_platelets_often_require_multiple_transfusions_that_s_why_it_s_so_important_to_donate_as_often_as_you_can">Patients who need platelets often require multiple transfusions. That\'s why it\'s so important to donate as often as you can.</string>
    <string name="platelets_are_s">Platelets are small, disc-shaped cells that aid in blood clotting.</string>
    <string name="report_fraud_or_scam"><u>Report Fraud or Scam</u></string>
    <string name="any_scam_regarding_blood_unit_or_other_unwanted_activity_found_than_feel_free_to_report_us">Any scam regarding blood unit or other unwanted \nactivity found than feel free to report us.</string>
    <string name="note_your_identity_will_not_be_publishing_in_any_matter_and_your_data_personal_identity_will_be_confidencial">Note: Your identity will not be publishing in any matter and your data/personal identity will be confidencial.</string>
    <string name="your_name">Your name</string>
    <string name="state">State</string>
    <string name="city_town_village">City/Town/Village</string>
    <string name="description">Description</string>
    <string name="type_your_name">Type your name</string>
    <string name="please_enter_state">Please enter state</string>
    <string name="please_enter_locality">Please enter locality</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="you_can_mail_us_on">You can mail us on</string>
    <string name="unit">Unit</string>
    <string name="order_details">Order Details</string>
    <string name="confirm_order">Confirm Order</string>
</resources>