<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ReportUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/report_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:gravity="bottom"
            android:paddingTop="15dp"
            app:title="@string/report_us" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="15dp"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            android:text="@string/report_fraud_or_scam"
            android:textColor="@color/pink"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/manrope_semibold"
            android:paddingVertical="10dp"
            android:text="@string/any_scam_regarding_blood_unit_or_other_unwanted_activity_found_than_feel_free_to_report_us"
            android:textColor="@color/text_color"
            android:textSize="12sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pink_round_corner_shape2"
            android:fontFamily="@font/manrope_semibold"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/note_your_identity_will_not_be_publishing_in_any_matter_and_your_data_personal_identity_will_be_confidencial"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/manrope_semibold"
            android:paddingTop="10dp"
            android:text="@string/your_name"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="5dp"
            android:background="@drawable/dark_grey_round_corner_shape"
            android:hint="@string/type_your_name"
            android:textSize="12sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/manrope_semibold"
            android:paddingTop="10dp"
            android:text="@string/state"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="5dp"
            android:background="@drawable/dark_grey_round_corner_shape"
            android:hint="@string/please_enter_state"
            android:textSize="12sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/manrope_semibold"
            android:paddingTop="10dp"
            android:text="@string/city_town_village"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="5dp"
            android:background="@drawable/dark_grey_round_corner_shape"
            android:hint="@string/please_enter_locality"
            android:textSize="12sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/manrope_semibold"
            android:paddingTop="10dp"
            android:text="@string/description"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:padding="5dp"
            android:background="@drawable/dark_grey_round_corner_shape"
            android:hint="@string/please_enter_description"
            android:textSize="12sp"
            android:textColor="@color/text_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_feedback"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pink_round_corner_shape2"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/or"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/pink"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/manrope_semibold"
            android:paddingVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/you_can_mail_us_on"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_semibold"
            android:layout_gravity="center_horizontal"
            android:text="@string/helppeople_gmail_com"
            android:textColor="@color/pink"
            android:textSize="12sp" />


    </LinearLayout>
</LinearLayout>