<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.InformationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/notification_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:gravity="bottom"
        app:title="@string/information" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:background="@color/gray"/>

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/type_of_donation"
                android:textColor="@color/pink"
                android:textSize="18sp" />

            <TextView
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/there_are_m"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/whole_blood_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/whole_blood"
                android:textColor="@color/pink"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/platelet_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/platelets"
                android:textColor="@color/pink"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/plasma_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/u_plasma"
                android:textColor="@color/pink"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/donation_matters_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/why_your_do"
                android:textColor="@color/pink"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/compatibility"
                android:textColor="@color/pink"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/everyone_wh"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/whole_blood"
                android:textColor="@color/pink"
                android:textSize="14sp" />

            <TextView
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/there_are_e"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                tools:targetApi="o" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="340dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_table_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/plasma_platelet"
                android:textColor="@color/pink"
                android:textSize="14sp" />

            <TextView
                android:justificationMode="inter_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/when_it_com"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                tools:targetApi="o" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="340dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_table_2" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>