<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginVertical="5dp"
    android:background="@drawable/dark_grey_round_corner_shape"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/bank_name"
            android:maxLines="2"
            android:textSize="14sp"
            android:lines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_name"
            android:textColor="@color/text_color"/>
        <TextView
            android:id="@+id/b_rating"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ratings"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/txt_phone"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone"
            android:textColor="@color/text_color"/>
        <TextView
            android:id="@+id/view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textColor="@color/pink"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:text="@string/direction"
    android:textColor="@color/text_color"
    android:layout_height="wrap_content"
    app:drawableTopCompat="@drawable/ic_direction"
    android:padding="5dp" />

    </LinearLayout>


</LinearLayout>