<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:orientation="vertical"
    android:background="@drawable/white_round_corner_shape"
    android:backgroundTint="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_details"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textColor="@color/pink"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:textSize="14sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_marginEnd="5dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_order"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/pink_round_corner_shape2"
        android:text="@string/confirm_order"
        android:fontFamily="@font/manrope_semibold"/>

</LinearLayout>